# anp-proxy

./: .gitignore  .pre-commit-config.yaml  README.md  anp_proxy.py  config.example.toml  config.toml  manage.sh  manage_template.sh  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
anp_proxy/: __init__.py  __main__.py  anp_proxy.py  app.py  cli.py  config.py
anp_proxy/anp_sdk/anp_auth/: __init__.py  did_wba_verifier.py
anp_proxy/anp_sdk/anp_crawler/: Interface.md  anp_client.py  anp_crawler.py  anp_interface.py  anp_parser.py  readme.md
anp_proxy/anp_sdk/anp_crawler/test/: README.md  example_embedded_openrpc.py  run_tests.py  test_anp_crawler.py  test_data_agent_description.json  test_data_embedded_openrpc.json  test_data_openrpc.json
anp_proxy/common/: __init__.py  auth.py  config.py  constants.py  db_base.py  did_resolver.py  did_wba.py  log_base.py  metrics.py  service_registry.py  utils.py
anp_proxy/examples/: __init__.py  setup_test_database.py  simple_fastapi_app.py  simple_test.py  test_ai_agent_infrastructure_flow.py  test_did_wba_comprehensive.py  test_gateway_receiver.py  test_gateway_receiver_did.py  usage_examples.py
anp_proxy/gateway/: __init__.py  connection.py  message.py  middleware.py  registry.py  request_mapper.py  response_handler.py  routing.py  server.py  smart_router.py  websocket_handler.py  websocket_manager.py
anp_proxy/protocol/: __init__.py  chunking.py  crc.py  decoder.py  encoder.py  exceptions.py  message.py
anp_proxy/receiver/: __init__.py  app_adapter.py  client.py  message_handler.py  reconnect.py
docs/: anp-did-spec.md  anp-proxy.md  code-architecture.md  proxy-protocol.md  wss-support-did.md
tests/: __init__.py
tests/unit/: __init__.py  test_protocol.py
todo_docs/: ai-agent-infrastructure-upgrade.md  anpx-protocol-flow-analysis.md  data-flow-analysis.md  feature.md  interaction-sequence-analysis.md  test-flow-log-analysis.md  test-flow-summary.md
