[project]
name = "anp-proxy"
version = "0.1.0"
description = "Agent Network Proxy - HTTP over WebSocket tunneling for private networks"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "click",
    "uvloop; sys_platform != 'win32'",
    "PyJWT",
    "rtoml",
    "cryptography",
    "aiohttp",
    "agent-connect",
    "PyMySQL",
    "python-dotenv",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
anp-proxy = "anp_proxy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# Preview features for better formatting
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

# Enable more strict formatting rules
[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "vulture>=2.14",
]
